add color variables

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,3 +1,13 @@
+:root {
+  --yellow: #f9d342;
+  --red: #ff6666;
+  --teal: #4bc6b9;
+  --black: #191919;
+  --grey: #646165;
+  --almost-white: #fafaff;
+  --white: #fcfcfc;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
