--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,3 +1,5 @@
+@import './typography.css';
+
 :root {
   --yellow: #f9d342;
   --red: #ff6666;
@@ -6,18 +8,4 @@
   --grey: #646165;
   --almost-white: #fafaff;
   --white: #fcfcfc;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
