--- a/client/src/components/Footer/index.css
+++ b/client/src/components/Footer/index.css
@@ -1,10 +1,7 @@
 @import '../../styles/index.css';
 
 .footer {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    bottom: 0;
+    height: 4rem;
     width: 100%;
     display: flex;
     align-items: center;
