--- a/client/src/pages/LandingPage/Contact/index.css
+++ b/client/src/pages/LandingPage/Contact/index.css
@@ -1,1 +1,25 @@
 @import '../../../styles/index.css';
+
+@import '../../../styles/index.css';
+
+.Contact {
+    display: flex;
+    align-items: center;
+    
+    min-height: 100vh;
+    padding: 0rem 6rem;
+}
+
+.Contact .text {
+    flex: 50%;
+}
+
+.Contact .text h1 {
+    font-size: 4rem;
+    text-shadow: 0rem 0.25rem 0.25rem rgb(0,0,0,0.25);
+    padding-bottom: 1rem;
+}
+
+.Contact .text h2 {
+    color: var(--grey);
+}
