--- a/client/src/pages/LandingPage/Home/index.css
+++ b/client/src/pages/LandingPage/Home/index.css
@@ -1,26 +1,74 @@
 @import '../../../styles/index.css';
 
-.Home {
+.Home header h3 {
+    font-size: 18px;
+}
+
+.Home header .scroll-menu {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    left: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 15rem 6rem;
+    background-color: var(--yellow);
 }
 
-.Home .text-col {
-    flex: 40%;
+.Home header .scroll-menu .empty {
+    flex-grow: 1;
 }
 
-.Home .text-col h1 {
+.Home header .scroll-menu li h1 {
+    font-size: 32px;
+}
+
+.Home header .scroll-menu li:first-of-type {
+    padding-left: 6rem;
+    display: flex;
+    align-items: center;
+}
+
+.Home header .scroll-menu li:last-of-type {
+    padding-right: 6rem;
+}
+
+.Home header .scroll-menu li .scroll-item {
+    color: var(--black);
+    text-decoration: transparent;
+}
+
+.Home header .scroll-menu li .scroll-item:hover {
+    border-bottom: 2px solid var(--black);
+}
+
+.Home header .scroll-menu li {
+    padding: 1em;
+}
+
+.Home .desc{
+    display: flex;
+    align-items: center;
+    
+    min-height: 100vh;
+    padding: 0rem 6rem;
+}
+
+.Home .desc .text-col {
+    flex: 50%
+}
+
+.Home .desc .text-col h1 {
     line-height: 3.75rem;
+    padding-bottom: 1rem;
 }
 
-.Home .text-col p {
+.Home .desc .text-col p {
     color: var(--grey);
     line-height: 1.75rem;
+    padding-bottom: 1rem;
 }
 
-.Home .text-col .login-btn {
+.Home .desc .text-col .login-btn {
     background-color: var(--red);
     border: 0px transparent;
     border-radius: 1.875rem;
