--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -28,10 +28,32 @@
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
-  text-align: center;
+  text-align: left;
   background-color: var(--white);
   border-style: solid;
   border-width: 1px;
   border-color: var(--black);
   border-radius: 15px;
+}
+
+.profilepicture {
+  width: 150px;
+  height: 150px;
+}
+
+.copylink {
+  width: 40px;
+  height: 40px;
+  margin-top: 5px;
+  margin-left: 30px;
+}
+
+.socials {
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+}
+
+.body {
+  color: var(--grey);
 }
