--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -6,8 +6,8 @@
 
 .element {
   padding: 50px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   text-align: center;
   background-color: var(--yellow);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
@@ -16,8 +16,8 @@
 
 .altelement {
   padding: 50px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   text-align: center;
   background-color: var(--red);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
@@ -37,8 +37,8 @@
 }
 
 .profilepicture {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
 }
 
 .copylink {
@@ -56,4 +56,30 @@
 
 .body {
   color: var(--grey);
+}
+
+.columns {
+  display: flex;
+  flex-direction: row;
+}
+
+.columnRight {
+  display: flex;
+  flex: 0.5;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.album {
+  width: 100px;
+  height: 100px;
+}
+
+.artistimg {
+  width: 100px;
+  height: 100px;
+}
+
+.artistimgs {
+  margin-top: 10px;
 }
