--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -4,6 +4,10 @@
   color: var(--red);
 }
 
+.body {
+  color: var(--grey);
+}
+
 .element {
   padding: 50px;
   margin-top: 15px;
@@ -39,6 +43,10 @@
 .profilepicture {
   width: 200px;
   height: 200px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: var(--black);
+  border-radius: 50%;
 }
 
 .copylink {
@@ -52,10 +60,7 @@
   width: 50px;
   height: 50px;
   margin-right: 15px;
-}
-
-.body {
-  color: var(--grey);
+  border-radius: 50%;
 }
 
 .columns {
@@ -63,9 +68,8 @@
   flex-direction: row;
 }
 
-.columnRight {
+.trackcontent {
   display: flex;
-  flex: 0.5;
   flex-direction: column;
   margin-left: 10px;
 }
@@ -76,8 +80,9 @@
 }
 
 .artistimg {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 }
 
 .artistimgs {
