--- a/client/src/pages/ProfilePage/index.css
+++ b/client/src/pages/ProfilePage/index.css
@@ -1,10 +1,16 @@
 @import "../../styles/index.css";
 
+/* General text styles */
 .title {
   text-align: left;
   color: var(--red);
 }
 
+.body {
+  color: var(--grey);
+}
+
+/* Margins for content */
 .content {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -12,21 +18,7 @@
   margin-right: 100px;
 }
 
-.personal {
-  overflow: hidden;
-  margin-bottom: 30px;
-  background-color: var(--almost-white);
-  border-radius: 15px;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-  min-width: 776px;
-}
-
-.header {
-  flex: 1;
-  width: 101%;
-  margin-bottom: -30%;
-}
-
+/* Row and column styles */
 .rows {
   display: flex;
   flex-direction: column;
@@ -73,6 +65,46 @@
   margin-left: 10px;
 }
 
+/* Personal info styles */
+.personal {
+  overflow: hidden;
+  margin-bottom: 30px;
+  background-color: var(--almost-white);
+  border-radius: 15px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  min-width: 776px;
+}
+
+.header {
+  flex: 1;
+  width: 101%;
+  margin-bottom: -30%;
+}
+
+.profilepicture {
+  width: 200px;
+  height: 200px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: var(--black);
+  border-radius: 50%;
+}
+
+.copylink {
+  width: 40px;
+  height: 40px;
+  margin-top: 5px;
+  margin-left: 30px;
+}
+
+.socials {
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+  border-radius: 50%;
+}
+
+/* Track styles */
 .tracks {
   padding: 30px;
   margin-bottom: 30px;
@@ -82,6 +114,30 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
 
+.trackelement {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: left;
+  background-color: var(--white);
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--black);
+  border-radius: 15px;
+}
+
+.trackcontent {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.album {
+  width: 100px;
+  height: 100px;
+}
+
+/* Artist styles */
 .artists {
   padding: 30px;
   margin-bottom: 30px;
@@ -91,6 +147,17 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
 
+.artistimg {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.artistimgs {
+  margin-top: 10px;
+}
+
+/* Playlist styles */
 .playlists {
   padding: 30px;
   margin-bottom: 30px;
@@ -100,10 +167,31 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
 
+/* Spotify Stats styles */
 .stats {
   padding: 30px;
   text-align: left;
   background-color: var(--almost-white);
   border-radius: 15px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+}
+
+.element {
+  padding: 50px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+  background-color: var(--yellow);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+}
+
+.altelement {
+  padding: 50px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+  background-color: var(--red);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 }
