--- a/client/src/pages/EditProfilePage/index.css
+++ b/client/src/pages/EditProfilePage/index.css
@@ -1,1 +1,9 @@
-@import '../../styles/index.css';
+@import "../../styles/index.css";
+
+.btn {
+  width: auto;
+  height: auto;
+  max-height: 40px;
+  margin-left: 30px;
+  margin-top: 5px;
+}
