--- a/client/src/pages/EditProfilePage/Popup/index.css
+++ b/client/src/pages/EditProfilePage/Popup/index.css
@@ -1,7 +1,14 @@
 @import "../../../styles/index.css";
 
 .modal {
-  display: none;
-  position: fixed;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -500px;
+  margin-top: -100px;
+  height: 1000px;
+  width: 1000px;
   background-color: var(--almost-white);
+  border-radius: 15px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
