--- a/client/src/pages/ProfilePage/index.css
+++ b/client/src/pages/ProfilePage/index.css
@@ -12,10 +12,7 @@
 
 /* Margins for content */
 .content {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin: 50px 100px 50px 100px;
 }
 
 /* Row and column styles */
@@ -91,10 +88,22 @@
 }
 
 .copylink {
-  width: 40px;
-  height: 40px;
-  margin-top: 5px;
-  margin-left: 30px;
+  width: 45px;
+  height: 45px;
+  margin-top: 2px;
+  margin-left: 20px;
+  color: var(--red);
+  background-color: var(--almost-white);
+  border-color: var(--red);
+  border-width: 0.3rem;
+  border-radius: 50%;
+}
+
+.link {
+  width: auto;
+  height: auto;
+  max-height: 25px;
+  margin-top: 0.2rem;
 }
 
 .socials {
