--- a/client/src/pages/ProfilePage/index.css
+++ b/client/src/pages/ProfilePage/index.css
@@ -87,6 +87,22 @@
   border-radius: 50%;
 }
 
+.btn {
+  width: auto;
+  height: auto;
+  max-height: 40px;
+  color: var(--red);
+  background-color: var(--almost-white);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 2.2rem;
+  border-color: var(--red);
+  border-width: 0.3rem;
+  border-radius: 2rem;
+  margin-left: 30px;
+  margin-top: 2px;
+}
+
 .copylink {
   width: 45px;
   height: 45px;
