unified file formattings in client/

--- a/client/src/pages/DefaultLayout/index.css
+++ b/client/src/pages/DefaultLayout/index.css
@@ -1,12 +1,11 @@
 @import '../../styles/index.css';
-
 .container {
     min-height: 100%;
     margin-bottom: -4rem;
 }
 
 .container:after {
-    content: "";
+    content: '';
     display: block;
     height: 4rem;
 }
