--- a/client/src/pages/ProfilePage/components/TopTracks/index.css
+++ b/client/src/pages/ProfilePage/components/TopTracks/index.css
@@ -9,6 +9,11 @@
   color: var(--grey);
 }
 
+a {
+  color: var(--black);
+  text-decoration: none;
+}
+
 .tracks .trackelement {
   padding: 10px;
   margin-top: 10px;
