--- a/client/src/pages/ProfilePage/components/Popup/index.css
+++ b/client/src/pages/ProfilePage/components/Popup/index.css
@@ -1,7 +1,7 @@
 @import "../../../../styles/index.css";
 
 .modal {
-  height: 1000px;
+  height: 700px;
   width: 1000px;
   background-color: var(--almost-white);
   border-radius: 15px;
@@ -83,50 +83,79 @@
 
 .modal .content .row-1 .col-2 .form {
   flex: 1;
-  padding: 30px;
+  text-align: left;
   margin-top: 0.5rem;
   margin-bottom: 30px;
+}
+
+.modal .content .row-1 .col-2 .form .input {
+  height: 156px;
+  width: 648px;
+  border: none;
+  outline: none;
   text-align: left;
+  padding: 10px;
   background-color: var(--almost-white);
   border-radius: 15px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  font-size: 18px;
+  font-family: "Hind";
+  font-weight: 400;
+  resize: none;
+}
+
+.modal .content .row-1 .col-2 .form .input::placeholder {
+  font-size: 18px;
+  font-family: "Hind";
+  font-weight: 400;
 }
 
 .modal .content .row-2 {
   display: flex;
   flex-direction: column;
-  height: 18rem;
+  height: 19rem;
 }
 
 .modal .content .row-2 .form {
   flex: 1;
+  display: flex;
   padding: 30px;
   margin-top: 0.5rem;
   margin-bottom: 30px;
-  text-align: left;
+  text-align: center;
   background-color: var(--almost-white);
   border-radius: 15px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+.modal .content .row-2 .form .input {
+  flex: 0.25;
+  height: 30px;
+  width: 160px;
+  border: none;
+  outline: none;
+  text-align: left;
+  padding: 10px;
+  background-color: var(--almost-white);
+  border-radius: 15px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  font-size: 18px;
+  font-family: "Hind";
+  font-weight: 400;
+  resize: none;
+  white-space: pre;
+}
+
+.modal .content .row-2 .socials {
+  width: 70px;
+  height: 70px;
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  border-radius: 50%;
 }
 
 .modal .content .row-3 {
-  display: flex;
-  flex-direction: column;
-  height: 18rem;
-}
-
-.modal .content .row-3 .form {
-  flex: 1;
-  padding: 30px;
-  margin-top: 0.5rem;
-  margin-bottom: 30px;
-  text-align: left;
-  background-color: var(--almost-white);
-  border-radius: 15px;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-}
-
-.modal .content .row-4 {
   display: flex;
   flex-direction: row;
   position: absolute;
@@ -134,7 +163,7 @@
   bottom: 2rem;
 }
 
-.modal .content .row-4 .btn {
+.modal .content .row-3 .btn {
   background-color: var(--red);
   border: 0px transparent;
   border-radius: 0.5rem;
@@ -144,15 +173,15 @@
   cursor: pointer;
 }
 
-.modal .content .row-4 .btn:focus {
+.modal .content .row-3 .btn:focus {
   outline: none;
 }
 
-.modal .content .row-4 .btn:active {
+.modal .content .row-3 .btn:active {
   transform: translateY(2px);
 }
 
-.modal .content .row-4 .btn h3 {
+.modal .content .row-3 .btn h3 {
   font-size: 1.5rem;
   color: var(--white);
 }
