--- a/client/src/pages/ProfilePage/components/Popup/index.css
+++ b/client/src/pages/ProfilePage/components/Popup/index.css
@@ -134,7 +134,7 @@
   width: 160px;
   border: none;
   outline: none;
-  text-align: left;
+  text-align: center;
   padding: 10px;
   background-color: var(--almost-white);
   border-radius: 15px;
