--- a/client/src/pages/DefaultLayout/Footer/index.css
+++ b/client/src/pages/DefaultLayout/Footer/index.css
@@ -1,7 +1,11 @@
 @import '../../../styles/index.css';
 
-.footer {
+.Footer {
     height: 4rem;
+}
+
+.footer {
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
