--- a/client/src/pages/DefaultLayout/index.css
+++ b/client/src/pages/DefaultLayout/index.css
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh !important;
+    min-height: 100vh;
 }
 
 .content-wrap {
