Fixed fb icon, fixed wrapping issues, added album name and artist to top tracks, added functionality for copy link

--- a/client/src/pages/ProfilePage/components/Popup/index.css
+++ b/client/src/pages/ProfilePage/components/Popup/index.css
@@ -102,6 +102,7 @@
   font-family: "Hind";
   font-weight: 400;
   resize: none;
+  white-space: nowrap;
 }
 
 .modal .content .row-1 .col-2 .form .input::placeholder {
