--- a/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
+++ b/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
@@ -1,1 +1,30 @@
 @import "../../../../styles/index.css";
+
+.title {
+  text-align: left;
+  color: var(--red);
+}
+
+.playlistimgs {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.playlistimgs .container {
+  position: relative;
+  padding: 10px;
+}
+
+.playlistimgs img {
+  height: 250px;
+  width: 250px;
+}
+
+.playlistimgs h3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--almost-white);
+  text-shadow: -1px -1px var(--red), 1px 1px var(--yellow);
+}
