--- a/client/src/pages/ProfilePage/components/TopArtists/index.css
+++ b/client/src/pages/ProfilePage/components/TopArtists/index.css
@@ -10,8 +10,8 @@
 }
 
 .artistimgs img {
-  padding: 1rem;
-  width: 150px;
-  height: 150px;
+  padding: 10px;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
 }
