Cleaned up code, added top genres

--- a/client/src/pages/ProfilePage/index.css
+++ b/client/src/pages/ProfilePage/index.css
@@ -116,6 +116,16 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 }
 
+/* Top genres */
+.genres {
+  padding: 30px;
+  margin-bottom: 30px;
+  text-align: left;
+  background-color: var(--almost-white);
+  border-radius: 15px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
 /* Playlists */
 .playlists {
   padding: 30px;
