--- a/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
+++ b/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
@@ -26,7 +26,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--almost-white);
-  text-shadow: -1px -1px var(--teal), 1px 1px var(--yellow);
+  text-shadow: -1px -1px var(--black), -1px 1px var(--black),
+    1px -1px var(--black), 1px 1px var(--black);
   max-width: 80%;
   text-align: center;
   word-wrap: break-word;
