--- a/client/src/pages/InHarmonyPage/Leaderboard/ComparedUser/index.css
+++ b/client/src/pages/InHarmonyPage/Leaderboard/ComparedUser/index.css
@@ -1,35 +1,42 @@
-@import '../../../styles/index.css';
+@import '../../../../styles/index.css';
 
 .ComparedUser {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: var(--almost-white);
     /* border: 1px solid var(--grey); don't know if we need this */
-    width: 75rem;
+    width: 100%;
     height: 10rem;
-    margin: .75rem auto;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
     border-radius: 2rem;
     /*-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);*/
     /*-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);*/
+    padding: 1rem 2rem;
 }
 
 .ComparedUser img {
-    float: left;
     border-radius: 50%;
-    height: 80%;
-    width: 80px;
-    display: block;
+    width: 8rem;
+    height: 8rem;
+    display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    margin-left: 10px;
 }
 
-.ComparedUser .name {
+.ComparedUser .text {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    padding: 1rem;
+    width: 50rem;
+}
+
+.ComparedUser .text .bio {
+    word-wrap: break-word;
     padding-top: 1rem;
-    text-indent: 1rem;
-    margin-bottom: 1rem;
 }
 
-.ComparedUser .bio {
-    text-indent: 1rem;
+.ComparedUser .score h1 {
+    font-size: 4rem;
 }
