changed the await call and fixed the button and in harmony pages

--- a/client/src/pages/InHarmonyPage/Leaderboard/index.css
+++ b/client/src/pages/InHarmonyPage/Leaderboard/index.css
@@ -42,6 +42,17 @@
     cursor: pointer;
 }
 
+.Leaderboard .harmonyHeader .harmonyRefresh .harmonyLoader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    border-width: 0rem;
+    background-color: inherit;
+    cursor: pointer;
+}
+
 .Leaderboard .harmonyHeader .harmonyRefresh .rbutton:active{
     outline: none;
     transform: translate(-50%, -52%);
