fixed position of the loader for the in harmony page

--- a/client/src/pages/InHarmonyPage/Leaderboard/index.css
+++ b/client/src/pages/InHarmonyPage/Leaderboard/index.css
@@ -42,7 +42,7 @@
     cursor: pointer;
 }
 
-.Leaderboard .harmonyHeader .harmonyRefresh .harmonyLoader {
+.Leaderboard .harmonyHeader .harmonyRefresh .css-0 {
     position: absolute;
     top: 50%;
     left: 50%;
