Fixed the ui for the compared users so it looks alright

--- a/client/src/pages/InHarmonyPage/Leaderboard/ComparedUser/index.css
+++ b/client/src/pages/InHarmonyPage/Leaderboard/ComparedUser/index.css
@@ -34,6 +34,10 @@
 
 .ComparedUser .text .bio {
     word-wrap: break-word;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
     padding-top: 1rem;
 }
 
