--- a/client/src/pages/ProfilePage/components/Popup/index.css
+++ b/client/src/pages/ProfilePage/components/Popup/index.css
@@ -48,8 +48,8 @@
 }
 
 .modal .content .row-1 .col-1 img {
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
   border-style: solid;
   border-width: 2px;
   border-color: var(--black);
@@ -72,6 +72,33 @@
 
 .modal .content .row-1 .col-1 .btn h3 {
   color: var(--red);
+}
+
+.modal .content .row-1 .col-1 .form {
+  flex: 1;
+  text-align: left;
+  margin-top: 0.5rem;
+  margin-bottom: 30px;
+  display: none;
+}
+
+.modal .content .row-1 .col-1 .form .input {
+  flex: 0.25;
+  height: 18px;
+  width: 160px;
+  border: none;
+  outline: none;
+  margin-left: 1%;
+  text-align: center;
+  padding: 10px;
+  background-color: var(--almost-white);
+  border-radius: 15px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  font-size: 12px;
+  font-family: "Hind";
+  font-weight: 400;
+  resize: none;
+  white-space: pre;
 }
 
 .modal .content .row-1 .col-2 {
