--- a/client/src/pages/ProfilePage/index.css
+++ b/client/src/pages/ProfilePage/index.css
@@ -167,6 +167,35 @@
   margin-top: 0.2rem;
 }
 
+/* Remove friend */
+.removefriend {
+  width: 45px;
+  height: 45px;
+  margin-top: 2px;
+  margin-left: 20px;
+  color: var(--red);
+  background-color: inherit;
+  border-color: var(--red);
+  border-width: 0.3rem;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.removefriend:focus {
+  outline: none;
+}
+
+.removefriend:active {
+  transform: translate(1px, 1px);
+}
+
+.removefriend .remove {
+  width: auto;
+  height: auto;
+  max-height: 25px;
+  margin-top: 0.2rem;
+}
+
 /* Message */
 .dm {
   width: 45px;
@@ -194,4 +223,44 @@
   height: auto;
   max-height: 25px;
   margin-top: 0.2rem;
+}
+
+/* Harmonize */
+.harmonize {
+  display: flex;
+  width: auto;
+  height: auto;
+  max-height: 45px;
+  color: var(--red);
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: inherit;
+  border-color: var(--red);
+  border-width: 0.3rem;
+  border-radius: 2rem;
+  margin-left: 20px;
+  margin-top: 2px;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
+.harmonize:focus {
+  outline: none;
+}
+
+.harmonize:active {
+  transform: translate(1px, 1px);
+}
+
+.harmonize h3 {
+  margin-right: 10px;
+}
+
+.harmonize .headphones {
+  width: auto;
+  height: auto;
+  max-height: 25px;
+  margin-top: 0.2rem;
+  margin-left: 10px;
+  margin-right: 10px;
 }
