--- a/client/src/pages/ProfilePage/components/Popup/index.css
+++ b/client/src/pages/ProfilePage/components/Popup/index.css
@@ -47,9 +47,16 @@
   flex-direction: column;
 }
 
-.modal .content .row-1 .col-1 img {
+.modal .content .row-1 .col-1 .imgcontainer {
+  position: relative;
   width: 180px;
   height: 180px;
+}
+
+.modal .content .row-1 .col-1 img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
   border-style: solid;
   border-width: 2px;
   border-color: var(--black);
