--- a/client/src/pages/ProfilePage/components/ProfilePicture/index.css
+++ b/client/src/pages/ProfilePage/components/ProfilePicture/index.css
@@ -1,8 +1,15 @@
 @import "../../../../styles/index.css";
 
-.pfp {
+.pfpcontainer {
+  position: relative;
   width: 200px;
   height: 200px;
+}
+
+.pfpcontainer .pfp {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
   border-style: solid;
   border-width: 2px;
   border-color: var(--black);
