Edited image sizes, attempted to fix popup

--- a/client/src/pages/ProfilePage/components/Popup/index.css
+++ b/client/src/pages/ProfilePage/components/Popup/index.css
@@ -67,6 +67,7 @@
   border: none;
   background-color: inherit;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 .modal .content .row-1 .col-1 .btn:focus {
