--- a/client/src/pages/ProfilePage/components/TopArtists/index.css
+++ b/client/src/pages/ProfilePage/components/TopArtists/index.css
@@ -12,8 +12,10 @@
 .artistimgs .image {
   flex: 33%;
   position: relative;
-  padding: 10px;
-  max-width: 13vw;
+  max-width: 11vw;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .artistimgs img {
@@ -31,5 +33,5 @@
 .artistimgs .row-1 {
   display: flex;
   flex-direction: row;
-  max-height: 13vw;
+  max-height: 11vw;
 }
