--- a/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
+++ b/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
@@ -13,9 +13,9 @@
   flex: 33%;
   position: relative;
   max-width: 12vw;
-  margin-top: 10px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-top: 0.6vw;
+  margin-left: 0.3vw;
+  margin-right: 0.3vw;
 }
 
 .playlistimgs img {
@@ -40,6 +40,7 @@
 .playlistimgs .rows {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 .playlistimgs .row-1 {
